# Clothing-Detection_YOLOV5

./: CMakeLists.txt  README.md  install.sh  package.xml
launch/: clothing_detect.launch
scripts/: cloth_detect_ros.py  new_image_demo.py
